SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/Product_Plant_Data__c.object-meta.xml
<CustomObject>
    <label>Product Plant Data</label>
    <nameField>
        <displayFormat>PPD-{0000000}</displayFormat>
        <label>Product Plant Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Plant Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>