SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <length>17</length>
    <type>Text</type>
</CustomField>