SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Origin__c</fullName>
    <description>Country ISO Code (3 characters)</description>
    <inlineHelpText>Country ISO Code (3 Characters)</inlineHelpText>
    <label>Country Of Origin</label>
    <length>3</length>
    <type>Text</type>
</CustomField>