SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Inventory_Level_for_Enorica__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Level_for_Enorica__c</fullName>
    <label>Inventory Level for Enorica</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>