SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Plant_ID__c.field-meta.xml
<CustomField>
    <fullName>Plant_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plant ID</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Product Plant Data</relationshipLabel>
    <relationshipName>Product_Plant_Data</relationshipName>
    <type>Lookup</type>
</CustomField>