SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Plant Data</relationshipLabel>
    <relationshipName>Product_Plant_Data</relationshipName>
    <type>Lookup</type>
</CustomField>