SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Product_Plant_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Plant_Ext_ID__c</fullName>
    <description>Combination of Product ID and Plant ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Product ID and Plant ID</inlineHelpText>
    <label>Product Plant Ext ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>