SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>