SynProdGITV1/force-app/main/default/objects/Product_Plant_Data__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UoM</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Product Plant Data</relationshipLabel>
    <relationshipName>Product_Plant_Data</relationshipName>
    <type>Lookup</type>
</CustomField>